# agent-gaia

./: .gitignore  instrumentation.ts  package.json
actions/: getCurrentPrice.tsx  getGameState.ts  getMessageById.ts  getMessages.ts  getMessagesCount.ts  getPrizePool.ts  getSessionWithPrice.ts  index.ts  pollData.ts  resetWinner.ts
actions/database/: getGameState.ts  getMessageById.ts  getMessages.ts  getMessagesCount.ts
actions/eliza/: agent.ts  next-client.ts
actions/gaia/: constants.ts  createDb.ts
app/: layout.tsx  page.tsx
app/faq/: page.tsx
app/lore/: page.tsx
components/: animations.tsx  connect.tsx  providers.tsx  wallet.tsx
contracts/paiement/: Cargo.toml  build.sh  justfile  state.json
contracts/paiement/artifacts/: checksums.txt  paiement.wasm
contracts/paiement/examples/: deploy.rs  deploy_mainnet.rs  migrate.rs  release_funds_end.rs  release_funds_winner.rs  reset.rs  schema.rs
contracts/paiement/schema/: gaia-treasury.json
contracts/paiement/schema/raw/: execute.json  instantiate.json  query.json  response_to_config.json  response_to_current_price.json  response_to_message.json  response_to_messages.json  response_to_timeout_status.json
contracts/paiement/src/: contract.rs  interface.rs  lib.rs  msg.rs  state.rs
contracts/paiement/tests/: reimbursement.rs
eliza/: GAIA-test.json  GAIA.json  nodemon.json  package.json  tsconfig.json
eliza/src/: api.ts  client.ts  constants.ts  index.ts  utils.ts
frontend/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json
frontend/actions/: changeJson.ts  getConfig.ts  getCurrentPrice.tsx  getPrizePool.ts  index.ts  pollData.ts  resetWinner.ts  useBalances.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: animations.tsx  capsule.tsx  capsuleClient.ts  connect.tsx  context.tsx  providers.tsx  wallet.tsx
frontend/lib/: end-game.ts  send-funds.ts  types.ts  (+2 more)
lib/: send-funds.ts  send-system-prompt.ts  utils.ts
public/: GAIA.json
(+65 files in other folders)
