[package]
name = "paiement"
version = "0.1.0"
edition = "2021"
resolver = "2"

[features]
library = []
schema = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "2.1.4" }
cosmwasm-schema = { version = "2.1.4" }
cw-storage-plus = "2.0.0"
cw-orch = { version = "0.27.0", features = ["daemon"] }
thiserror = { version = "1.0.50" }
cw-paginate = "2.0.0"

[dev-dependencies]

dotenv = "0.15.0"
env_logger = "0.10.0"
clap = { version = "4.3.7", features = ["derive"] }
anyhow = "1.0.94"
