[package]
name = "paiement"
version = "0.1.0"
edition = "2021"
resolver = "2"

[features]
library = []
schema = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "2.1.4", features = ["stargate"] }
cosmwasm-schema = { version = "2.1.4" }
cw-storage-plus = "2.0.0"
cw-orch = { version = "0.27.0", features = ["daemon"] }
thiserror = { version = "1.0.50" }
cw-paginate = "2.0.0"
serde = "1.0.218"

[dev-dependencies]

dotenv = "0.15.0"
env_logger = "0.10.0"
clap = { version = "4.3.7", features = ["derive"] }
anyhow = "1.0.94"
cosmos-sdk-proto = "0.26.1"
prost-types = "0.12.3"


## DaoDao
dao-voting = { git = "https://github.com/Kayanski/dao-contracts", version = "2.6.0" }
dao-cw-orch = { git = "https://github.com/Kayanski/dao-contracts", version = "2.6.0" }
dao-pre-propose-base = { git = "https://github.com/Kayanski/dao-contracts", version = "2.6.0" }
dao-pre-propose-single = { git = "https://github.com/Kayanski/dao-contracts", version = "2.6.0" }
cosmwasm-std-1 = { package = "cosmwasm-std", version = "1.5.1" }
cw-orch-1 = { package = "cw-orch", version = "0.24.0", features = ["daemon"] }

sqlx = { version = "0.8.3", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "time",
] }
serde_json = "1.0.139"
ibc-proto = "0.51.1"
